1998-08-26  Samuel Tardieu  <sam@inf.enst.fr>

	* s-rpc.ads: Minor reformatting.

	* s-rpc.adb: Likewise.

	* s-garstr.ads: (Dump): pass packet by reference instead of by
	copy.

	* s-garstr.adb: Likewise.

	* s-gartra.ads: Unify Data_Type which is used by this package and 
	System.Garlic.Replay. Define stream Read and Write attributes for
	this type that do not require any large heap allocation.

	* s-gartra.adb: Define new stream attributes for Data_Type.

	* s-garhea.ads: (Has_Arrived): add an optional Offset argument
	that says how much of the packet must be discarded. Pass the
	packet by reference instead of by copy to prevent stack overflow.

	* s-garhea.adb: Use new interface for tracing. Use the new Offset
	parameter of Has_Arrived to discard the extra room allocated in
	case of a All_Calls_Remote package.

	* s-garrep.adb: Use Data_Type from System.Garlic.Trace. Use new
	interface for Has_Arrived.

	* s-gartcp.adb: Use new interface for Has_Arrived.

1998-08-17  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-garhea.adb: Remove previous use of reconnection in this
 	package (it was not implemented at all for several years). Add
 	reconnection policy as a partition field in public_data.

	* s-garopt.adb: Add reconnection option and initialized it as
 	Reject_On_Restart. Provide new procedures.

	* s-garopt.ads: Add new procedure Set_Reconnection.

	* s-gartyp.ads: Remove old Reconnection_Type and reset a new one.

	* s-garuni.adb: Handle the three reconnection policies. Also,
 	handle the case where a RCI unit is registered several times in
 	order to raise a program_error exception except for the first
 	one. Handle a list of RCI units per partition. Update the way
 	caches were handled and add a new status Invalid. Add a dependency
 	on Garlic.Elaboration and Garlic.Options to get the reconnection
 	policy. A registration is done now in two steps. A RCI sends its
 	data and then ask for them to check that the registration went
 	well.
